--- a/templates/item.html
+++ b/templates/item.html
@@ -2,4 +2,6 @@
 {% block content %}
 	<h4>{{item.title}}</h4>
 	<h4>{{item.description}}</h4>
+	<a href="{{url_for('edit_item', category_id=item.category_id, item_id=item.id)}}">edit</a>
+    <a href="{{url_for('delete_item', category_id=item.category_id, item_id=item.id)}}">delete</a>
 {% endblock %}
