included category into item responses

--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -6,6 +6,6 @@
 	<a href="{{url_for('add_item')}}">Add Item</a>
     <h4>Lastest Items</h4>
     {% for item in lastest_items %}
-	<a href="{{url_for('get_item', category_id=item.category_id, item_id=item.id)}}">{{item.title}}</a><span> (TODO)</span>
+	<a href="{{url_for('get_item', category_id=item.category_id, item_id=item.id)}}">{{item.title}}</a><span> ({{item.category.name}})</span>
 	{% endfor %}
 {% endblock %}
