improvements on UI

--- a/templates/header.html
+++ b/templates/header.html
@@ -1,9 +1,23 @@
-<a href="{{url_for('get_catalog')}}">Catalog</a>
+<nav class="navbar navbar-dark bg-dark">
+    <a class="navbar-brand" href="{{url_for('get_catalog')}}">Catalog</a>
+    {% if login == 'disconnected' %}
+        <a class="btn btn-outline-primary" href="{{url_for('show_login')}}">Login</a>
+    {% endif %}
 
-{% if login == 'disconnected' %}
-<a href="{{url_for('show_login')}}">Log in</a>
-{% endif %}
+    {% if login == 'connected' %}
+        <a class="btn btn-outline-primary" href="{{url_for('disconnect')}}" >Logout</a>
+    {% endif %}
+</nav>
+{% with messages = get_flashed_messages() %}
+    {% if messages %}
+    <ul>
+        {% for message in messages %}
+            <div class="alert alert-success" role="alert">
+                {{message}}
+            </div>
+        {% endfor %}
+    </ul>
+    {% endif %}
+{% endwith %}
 
-{% if login == 'connected' %}
-<a href="{{url_for('disconnect')}}">Log out</a>
-{% endif %}
+
