--- a/templates/deleteitem.html
+++ b/templates/deleteitem.html
@@ -1,12 +1,16 @@
 {% extends "main.html" %}
 {% block content %}
-    <h4>Delete {{item.title}}</h4>
-    <p>Are you sure you want to delete?</p>
-    <form method="post">
-        <button type="submit" class="btn btn-default" id="submit">
-                    <span class="glyphicon glyphicon-cutlery"
-                          aria-hidden="true"></span>Confirm
-        </button>
-        <a href="{{url_for('get_item', category_id=item.category_id, item_id=item.id)}}">Cancel</a>
-    </form>
+<div class="card offset-md-2 card-align">
+    <div class="card-header">
+        <h2>Delete {{item.title}}</h2>
+    </div>
+    <div class="card-body">
+        <p>Are you sure you want to delete?</p>
+        <form method="post">
+            <button type="submit" class="btn btn-danger" id="submit">
+                    Confirm
+            </button>
+            <a class="btn btn-secondary" href="{{url_for('get_item', category_id=item.category_id, item_id=item.id)}}">Cancel</a>
+        </form>
+    </div>
 {% endblock %}
