--- a/templates/form.html
+++ b/templates/form.html
@@ -1,32 +1,30 @@
 {% extends "main.html" %}
 {% block content %}
-<h1>{{action_title}}</h1>
-
-<div class="row">
-    <div class="col-md-6 col-md-offset-1 padding-top">
-        <form action="#" method="post">
+<div class="card">
+    <div class="card-body">
+        <h1>{{action_title}}</h1>
+        <form method="post">
             <div class="form-group">
                 <label for="title">Title:</label>
                 <input type="text" class="form-control" maxlength="255"
                        name="title" id="title" value="{{item.title}}">
+            </div>
+            <div class="form-group">
                 <label for="description">Description:</label>
-                <input type="text" class="form-control" maxlength="500"
-                       name="description" id="description" value="{{item.description}}">
-                <div class="padding-bottom"></div>
+                <textarea class="form-control" maxlength="500"
+                          name="description" id="description">{{item.description}}</textarea>
+            </div>
+            <div class="form-group">
                 <label for="category">Category:</label>
-                <select name="category" id="category">
+                <select class="form-control" name="category" id="category">
                     {% for cat in category_list %}
-                        <option value="{{cat.id}}" {% if cat.id == item.category_id%}selected{% endif %}>{{cat.name}}</option>
+                    <option value="{{cat.id}}" {% if cat.id == item.category_id%}selected{% endif %}>{{cat.name}}</option>
                     {% endfor %}
                 </select>
-                <button type="submit" class="btn btn-default" id="submit"
-                        type="submit">
-                    <span class="glyphicon glyphicon-cutlery"
-                          aria-hidden="true"></span>Save
-                </button>
-                <a href="{% if action_title == 'Add Item' %}{{url_for('get_catalog')}}{% endif %}
-                {% if action_title == 'Edit Item' %}{{url_for('get_item', category_id=item.category_id, item_id=item.id)}}{% endif %}">Cancel</a>
             </div>
+            <button type="submit" class="btn btn-success" id="submit" >Save</button>
+            <a class="btn btn-secondary" href="{% if action_title == 'Add Item' %}{{url_for('get_catalog')}}{% endif %}
+                        {% if action_title == 'Edit Item' %}{{url_for('get_item', category_id=item.category_id, item_id=item.id)}}{% endif %}">Cancel</a>
         </form>
     </div>
 </div>
