--- a/templates/item.html
+++ b/templates/item.html
@@ -1,7 +1,13 @@
 {% extends "main.html" %}
 {% block content %}
-	<h4>{{item.title}}</h4>
-	<h4>{{item.description}}</h4>
-	<a href="{{url_for('edit_item', category_id=item.category_id, item_id=item.id)}}">edit</a>
-    <a href="{{url_for('delete_item', category_id=item.category_id, item_id=item.id)}}">delete</a>
+<div class="card offset-md-2 card-align">
+  <div class="card-header">
+    <h3 class="card-title">{{item.title}}</h3>
+  </div>
+  <div class="card-body">
+    <p class="card-text">{{item.description}}</p>
+    <a class="card-link btn btn-success button-align" href="{{url_for('edit_item', category_id=item.category_id, item_id=item.id)}}">edit</a>
+    <a class="card-link btn btn-danger button-align" href="{{url_for('delete_item', category_id=item.category_id, item_id=item.id)}}">delete</a>
+  </div>
+</div>
 {% endblock %}
