--- a/templates/items.html
+++ b/templates/items.html
@@ -1,10 +1,26 @@
 {% extends "main.html" %}
 {% block content %}
-{% for cat in category_list %}
-    <a href="{{url_for('get_items', category_id=cat.id )}}">{{cat.name}}</a>
-{% endfor %}
-    <h4>{{category.name}} Items ({{count}} {% if count == 1 %}item{% endif %}{% if count != 1 %}items{% endif %})</h4>
-{% for item in item_list %}
-    <a href="{{url_for('get_item', category_id=category.id, item_id=item.id)}}">{{item.title}}</a>
-{% endfor %}
+<div class="col-12 columns-align">
+    <div class="col-2">
+        <ul class="list-group">
+            {% for category in category_list %}
+                <a class="list-group-item list-group-item-action"
+                    href="{{url_for('get_items', category_id=category.id )}}">{{category.name}}</a>
+            {% endfor %}
+        </ul>
+    </div>
+    <div class="col-10 background-items">
+        <div class="container">
+            <h4 class="margin-bottom-align">{{category.name}} Items ({{count}} {% if count == 1 %}item{% endif %}{% if count != 1 %}items{% endif %})
+            </h4>
+            <ul>
+                {% for item in item_list %}
+                <li>
+                    <a class="link-font" href="{{url_for('get_item', category_id=category.id, item_id=item.id)}}">{{item.title}}</a>
+                </li>
+                {% endfor %}
+            </ul>
+        </div>
+    </div>
+</div>
 {% endblock %}
