--- a/templates/logged.html
+++ b/templates/logged.html
@@ -1,5 +1,5 @@
 {% block content %}
-	<h1>Welcome, {{username}}!</h1>
-	<img src="{{picture_url}}" style="width: 300px; height: 300px;border-radius:150px;-webkit-border-radius: 150px;-moz-border-radius:150px;">
+	<img src="{{picture_url}}" style="width: 100px; height: 100px;border-radius:50px;-webkit-border-radius: 50px;-moz-border-radius:50px;">
+	<h4>{{username}}</h4>
     <p>You will be redirected in a moment...</p>
 {% endblock %}
