--- a/templates/login.html
+++ b/templates/login.html
@@ -1,19 +1,26 @@
 {% extends "main.html" %}
 {% block content %}
 <!-- GOOGLE SIGN IN BUTTON-->
-<div id="signinButton">
-          <span class="g-signin"
-                data-scope="openid email"
-                data-clientid="980901361820-u56dv7uosjj19q0n6b13e8itkaai1aq9.apps.googleusercontent.com"
-                data-redirecturi="postmessage"
-                data-accesstype="offline"
-                data-cookiepolicy="single_host_origin"
-                data-callback="signInCallback"
-                data-approvalprompt="force">
-          </span>
+<div class="card offset-md-4 card-login-align">
+    <div class="card-header">
+        <h3>Please sign in.</h3>
+    </div>
+    <div class="card-body">
+        <div id="signinButton">
+                  <span class="g-signin"
+                        data-scope="openid email"
+                        data-clientid="980901361820-u56dv7uosjj19q0n6b13e8itkaai1aq9.apps.googleusercontent.com"
+                        data-redirecturi="postmessage"
+                        data-accesstype="offline"
+                        data-cookiepolicy="single_host_origin"
+                        data-callback="signInCallback"
+                        data-approvalprompt="force">
+                  </span>
+        </div>
+        <div id="result"></div>
+    </div>
 </div>
 
-<div id="result"></div>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
 <script src="//apis.google.com/js/platform.js?onload=start"></script>
 <script>
@@ -32,7 +39,7 @@ function signInCallback(authResult) {
       success: function(result) {
         // Handle or verify the server response if necessary.
         if (result) {
-          $('#result').html('Login Successful!</br>'+ result + '</br>Redirecting...')
+          $('#result').html(result)
          setTimeout(function() {
           window.location.href = "/catalog";
          }, 4000);
