--- a/templates/publiccatalog.html
+++ b/templates/publiccatalog.html
@@ -1,10 +1,27 @@
 {% extends "main.html" %}
 {% block content %}
-	{% for category in category_list %}
-		<a href="{{url_for('get_items', category_id=category.id )}}">{{category.name}}</a>
-	{% endfor %}
-    <h4>Lastest Items</h4>
-    {% for item in lastest_items %}
-	<a href="{{url_for('get_item', category_id=item.category_id, item_id=item.id)}}">{{item.title}}</a><span> ({{item.category.name}})</span>
-	{% endfor %}
+<div class="col-12 columns-align">
+    <div class="col-2">
+        <ul class="list-group">
+            {% for category in category_list %}
+                <a class="list-group-item list-group-item-action"
+                    href="{{url_for('get_items', category_id=category.id )}}">{{category.name}}</a>
+            {% endfor %}
+        </ul>
+    </div>
+    <div class="col-10 background-items">
+        <div class="container">
+            <h4 class="margin-bottom-align">Lastest Items</h4>
+            <ul>
+                {% for item in lastest_items %}
+                <li>
+                    <a class="link-font" href="{{url_for('get_item', category_id=item.category_id, item_id=item.id)}}">{{item.title}}</a>
+                    <span class="span-color"> ({{item.category.name}})</span>
+                </li>
+                {% endfor %}
+            </ul>
+        </div>
+    </div>
+
+</div>
 {% endblock %}
