--- a/templates/publicitem.html
+++ b/templates/publicitem.html
@@ -1,5 +1,11 @@
 {% extends "main.html" %}
 {% block content %}
-	<h4>{{item.title}}</h4>
-	<h4>{{item.description}}</h4>
+<div class="card offset-md-2 card-align">
+  <div class="card-header">
+    <h3 class="card-title">{{item.title}}</h3>
+  </div>
+  <div class="card-body">
+    <p class="card-text">{{item.description}}</p>
+  </div>
+</div>
 {% endblock %}
