--- a/templates/form.html
+++ b/templates/form.html
@@ -1,5 +1,16 @@
 {% extends "main.html" %}
 {% block content %}
+{% with messages = get_flashed_messages() %}
+    {% if messages %}
+    <ul>
+        {% for message in messages %}
+            <div class="alert alert-danger" role="alert">
+                {{message}}
+            </div>
+        {% endfor %}
+    </ul>
+    {% endif %}
+{% endwith %}
 <div class="card">
     <div class="card-body">
         <h1>{{action_title}}</h1>
