send client_id as a parameter

--- a/templates/login.html
+++ b/templates/login.html
@@ -9,7 +9,7 @@
         <div id="signinButton">
                   <span class="g-signin"
                         data-scope="openid email"
-                        data-clientid="980901361820-u56dv7uosjj19q0n6b13e8itkaai1aq9.apps.googleusercontent.com"
+                        data-clientid="{{client_id}}"
                         data-redirecturi="postmessage"
                         data-accesstype="offline"
                         data-cookiepolicy="single_host_origin"
